[project]
name = "ash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zhuoyun Wei", email = "wzyboy@wzyboy.org" }
]
requires-python = ">=3.13"
dependencies = [
    "blinker==1.6.2",
    "certifi==2023.5.7",
    "charset-normalizer==3.2.0",
    "click==8.1.4",
    "elastic-transport==8.4.0",
    "elasticsearch==8.8.0",
    "flask==2.3.2",
    "flask-httpauth==4.8.0",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "requests==2.31.0",
    "urllib3==1.26.16",
    "werkzeug==2.3.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
