[project]
name = "ash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zhuoyun Wei", email = "wzyboy@wzyboy.org" }
]
requires-python = ">=3.10"
dependencies = [
    "elasticsearch==8.8.0",
    "flask==2.3.2",
    "flask-httpauth==4.8.0",
    "gunicorn>=25.2.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
